<?xml version="1.1" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/text_SetTimer"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <NumberPicker
            android:id="@+id/np1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"/>

        <NumberPicker
            android:id="@+id/np2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/sets_number"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/decrement_button_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="@string/decrement" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets_quantity"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/increment_button_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="@string/increment" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/start"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:onClick="onClickStart"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/paw"
        android:src="@drawable/paw"
        android:background="@android:color/transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/start" />

</LinearLayout>